Fix the overflow

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
   background-color: #1c1917;
   color: #fafaf9;
   font-family: "Sono", sans-serif;
-  padding: 48px 64px;
+  padding: 40px 64px 0;
 }
 
 .hidden {
@@ -45,12 +45,18 @@ body {
   display: grid;
   grid-template-columns: 250px 1fr;
   gap: 48px;
+  height: calc(100vh - 45px - 68px - 40px);
 }
 
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
   }
+}
+
+section {
+  overflow: scroll;
+  padding-bottom: 40px;
 }
 
 /* ELEMENTS */
@@ -224,10 +230,6 @@ ul {
 }
 
 @media (max-width: 1000px) {
-  body {
-    padding: 32px 48px;
-  }
-
   .fact-form {
     flex-direction: column;
     align-items: stretch;
